// Jest Snapshot v1, https://goo.gl/fbAQLP

<<<<<<<< HEAD:src/tests/__snapshots__/components/Header.snap.js
exports[`Header component should render Header component with registration and login links when user is not authenticated 1`] = `
========
exports[`Header component should renders Header component with registration and login links when user is not authenticated 1`] = `
>>>>>>>> origin/newTest:src/tests/components/__snapshots__/Header.test.js.snap
<body>
  <div>
    <nav
      class="sc-bcPKhP dQGMuo navbar navbar-expand-lg navbar-light"
    >
      <a
        class="sc-grXZZQ hAmrUf mx-4"
        href="/"
      >
        Shop
      </a>
      <button
        aria-controls="basic-navbar-nav"
        aria-label="Toggle navigation"
        class="navbar-toggler collapsed"
        type="button"
      >
        <span
          class="navbar-toggler-icon"
        />
      </button>
      <div
        class="sc-dkjKgF fEMtAl justify-content-end mx-2 navbar-collapse collapse"
        id="basic-navbar-nav"
      >
        <div
          class="ml-auto mx-2 navbar-nav"
        >
          <a
            class="nav-link"
            href="/registration"
          >
            Registration
          </a>
          <a
            class="nav-link"
            href="/login"
          >
            Login
          </a>
        </div>
      </div>
    </nav>
  </div>
</body>
`;

<<<<<<<< HEAD:src/tests/__snapshots__/components/Header.snap.js
exports[`Header component with login should render Header component without registration and login links when user is authenticated 1`] = `
========
exports[`Header component with login should renders Header component without registration and login links when user is authenticated 1`] = `
>>>>>>>> origin/newTest:src/tests/components/__snapshots__/Header.test.js.snap
<body>
  <div>
    <nav
      class="sc-bcPKhP dQGMuo navbar navbar-expand-lg navbar-light"
    >
      <a
        class="sc-grXZZQ hAmrUf mx-4"
        href="/"
      >
        Shop
      </a>
      <button
        aria-controls="basic-navbar-nav"
        aria-label="Toggle navigation"
        class="navbar-toggler collapsed"
        type="button"
      >
        <span
          class="navbar-toggler-icon"
        />
      </button>
      <div
        class="sc-dkjKgF fEMtAl justify-content-end mx-2 navbar-collapse collapse"
        id="basic-navbar-nav"
      >
        <div
          class="ml-auto mx-2 navbar-nav"
        />
      </div>
    </nav>
  </div>
</body>
`;
